fix mobile nav item so they do not wrap to next line

--- a/styles/components/MobileNav.module.scss
+++ b/styles/components/MobileNav.module.scss
@@ -16,12 +16,8 @@
   position: fixed;
   right: 0;
   height: 100vh;
-  width: 75%;
+  width: 85%;
   background-color: $color--dark-blue;
-}
-
-.list {
-  padding: space(8);
 }
 
 .item {
